# whisperServer

./: .gitignore  DEPLOYMENT_RISKS.md  README.md  app.conf.default  app.py  gemini_api_key.txt  go.mod  go.sum  install_macos.sh  install_requirements.sh  job_persist.py  pyproject.toml  requirements.txt  server  server.sh
docs/: Requirement_Specification.md  architecture.md  codes.md  db-schema.md  endpoints.md  refactor_plan.md  request_code.go  transcript_system_prompt.md
docs/prompts/: file_transcript_response.json  file_transcript_system_prompt.md  refine_timeline_system_prompt.md  transcript_response.json  transcript_system_prompt.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AppErrorPage.tsx  AppShell.tsx  main.tsx  pages.tsx  styles.css  usePageTitle.ts
sample/: whisper_cli.sh
src/: app.py  config.py  logging_config.py
src/cmd/server/: main.go
src/internal/app/: app.go  auth.go  (+34 more)
src/services/: gemini_service.py
src/utils/: media.py  text.py
src/workers/: whisper_worker.py
static/: app.js  style.css
static/css/: style.css
static/files/: boot.js  drag.js  filter.js  interactions.js  render.js  state.js  upload.js
static/jobs/: waiting_page.js
templates/: base.html  home.html  jobs.html  login.html  preview.html  result.html  signup.html  tags.html  trash.html  upload.html  waiting.html
templates/layouts/: base.html
templates/pages/: auth_login.html  auth_signup.html  files_index.html  files_trash.html  files_upload.html  job_preview.html  job_result.html  job_waiting.html  tags_index.html
(+167 files in other folders)
