[project]
name = "whisperserver"
version = "0.1.0"
description = "Simple Whisper-based STT server using FastAPI"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "neuroner0425"}]

[project.dependencies]
fastapi = "0.95.2"
uvicorn = {version = "0.22.0", extras = ["standard"]}
whisper = "20230314"
torch = "2.2.0"
jinja2 = "3.1.2"
python-multipart = "0.0.6"
werkzeug = "3.0.1"
prometheus-client = "0.16.0"
portalocker = "2.8.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
